Firebase create working, firebase delete not working

--- a/Journal/Podfile
+++ b/Journal/Podfile
@@ -8,6 +8,7 @@ target 'Journal' do
   # Pods for Journal
 
 pod 'Firebase/Database'
+pod 'Firebase/Analytics'
 
   target 'JournalTests' do
     inherit! :search_paths
